--- a/Assesment/.classpath
+++ b/Assesment/.classpath
@@ -23,5 +23,14 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/YUVRAJ/.m2/repository/io/cucumber/cucumber-core/7.4.1/cucumber-core-7.4.1.jar" sourcepath="C:/Users/YUVRAJ/.m2/repository/io/cucumber/cucumber-core/7.4.1/cucumber-core-7.4.1-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="io.cucumber"/>
+			<attribute name="maven.artifactId" value="cucumber-core"/>
+			<attribute name="maven.version" value="7.4.1"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
